--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <div class="response" id="mce-error-response" style="display:none"></div>
                                 <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_013b204b588eee32a9b69cc5a_10e1834b64" tabindex="-1" value=""></div>
+                            <div aria-hidden="true"><input type="text" name="b_013b204b588eee32a9b69cc5a_10e1834b64" tabindex="-1" value=""></div>
                             <div class="clear"><input class="btn btn-primary" type="submit" value="Learn More" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                             </div>
                         </form>
